objects/CEE__c.object
<CustomObject>
    <fields>
        <fullName>Current_Commit_Opportunity_Amount__c</fullName>
        <formula>IF(Current_Opportunity_Forecast_Status__c = "Commit",Current_Opportunity_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Commit Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Days__c</fullName>
        <formula>IF(Jiffle_Event__r.Event_Start_Date__c &gt; TODAY(),Jiffle_Event__r.Event_Start_Date__c - TODAY(), TODAY() - Jiffle_Event__r.Event_End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Lost_Opportunity_Amount__c</fullName>
        <formula>IF(Current_Opportunity_Status__c = "Lost",Current_Opportunity_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Lost Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_NF_Opportunity_Amount__c</fullName>
        <formula>IF(Current_Opportunity_Forecast_Status__c = "Not Forecastable",Current_Opportunity_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current NF Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Opportunity_Amount__c</fullName>
        <description>JiffleNow Re-design: To show current Opportunity Amount</description>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Opportunity_Forecast_Status__c</fullName>
        <description>JiffleNow Re-design: To show current Opportunity Forecast Status</description>
        <formula>Text(Opportunity__r.Forecast_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Opportunity Forecast Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Opportunity_Status__c</fullName>
        <description>JiffleNow Re-design: To show current Opportunity Status</description>
        <formula>Text(Opportunity__r.Opportunity_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Opportunity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Upside_Opportunity_Amount__c</fullName>
        <formula>IF(Current_Opportunity_Forecast_Status__c = "Upside",Current_Opportunity_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Upside Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Start_date__c</fullName>
        <description>This is a CPOC releated fields.</description>
        <label>Customer Start date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DCloud_Usage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is CPOC lab request related field</description>
        <label>dCloud Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DLP_Order_Number__c</fullName>
        <description>This is CPOC lab request related field.</description>
        <label>DLP Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DLP_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is related toCPOC lab request</description>
        <label>DLP Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>D_B_Vertical_Market_Dtl__c</fullName>
        <formula>Primary_Account__r.VMDTL__c</formula>
        <label>D&amp;B Vertical Market (Dtl)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Vertical_Market_Sub__c</fullName>
        <formula>Primary_Account__r.VMSUB__c</formula>
        <label>D&amp;B Vertical Market (Sub)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_When_Opportunity_Booked__c</fullName>
        <description>JiffleNow Re-design: To capture date when opportunity is booked</description>
        <label>Date When Opportunity Booked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Taken_To_Book_Opportunity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To capture days taken to book the opportunity</description>
        <label>Days Taken To Book Opportunity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DealID_Temp__c</fullName>
        <label>DealID_Temp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_ID_Exists__c</fullName>
        <description>This field shows if the Main Event record has Deal ID association or not along with any Multi Account Engagement record.</description>
        <formula>IF (Deal_Id__c = NULL, IF (  of_Multi_Account_Engagements__c = 0, 'NO', 'YES'),'YES')</formula>
        <label>Deal ID Exists?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Id__c</fullName>
        <formula>Opportunity__r.DealID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Stage__c</fullName>
        <formula>TEXT( Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Value__c</fullName>
        <formula>Opportunity__r.Expected_Total_Value_000_s__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Value(000s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <description>Decision Maker in Attendance</description>
        <inlineHelpText>Classify the primary decision maker from the customer that will attend</inlineHelpText>
        <label>Decision Maker in Attendance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Apps Buyer</fullName>
                </value>
                <value>
                    <fullName>Chairman</fullName>
                </value>
                <value>
                    <fullName>Chief Digital Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Experience Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Finance Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Information Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Information Security Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Marketing Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Operations Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Science Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Technology Officer</fullName>
                </value>
                <value>
                    <fullName>Contact Center Buyer</fullName>
                </value>
                <value>
                    <fullName>Data Center Manager</fullName>
                </value>
                <value>
                    <fullName>Desktop Apps Buyer</fullName>
                </value>
                <value>
                    <fullName>Executive Vice President</fullName>
                </value>
                <value>
                    <fullName>Head of IT Infrastructure</fullName>
                </value>
                <value>
                    <fullName>IT Architect</fullName>
                </value>
                <value>
                    <fullName>Line of Business Manager</fullName>
                </value>
                <value>
                    <fullName>Networking Buyer</fullName>
                </value>
                <value>
                    <fullName>Procurement Generalist</fullName>
                </value>
                <value>
                    <fullName>Security Architect</fullName>
                </value>
                <value>
                    <fullName>Security Ops / Analyst</fullName>
                </value>
                <value>
                    <fullName>Server Buyer</fullName>
                </value>
                <value>
                    <fullName>Storage Buyer</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Video Buyer</fullName>
                </value>
                <value>
                    <fullName>Voice/ Telecom Buyer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <label>Delivery Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Service_type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
                <value>
                    <fullName>@CPOC</fullName>
                </value>
                <value>
                    <fullName>Self Serve</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
                <value>
                    <fullName>On-Site</fullName>
                </value>
                <value>
                    <fullName>@dcloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Delivery_Location_s__c</fullName>
        <label>Demo Delivery Location(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Galway</fullName>
                </value>
                <value>
                    <fullName>Herndon</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Oslo</fullName>
                </value>
                <value>
                    <fullName>Richardson</fullName>
                </value>
                <value>
                    <fullName>RTP</fullName>
                </value>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>SJ</fullName>
                </value>
                <value>
                    <fullName>Songdo</fullName>
                </value>
                <value>
                    <fullName>Sydney</fullName>
                </value>
                <value>
                    <fullName>Tokyo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deportment_ID__c</fullName>
        <formula>Engagement_Contact__r.Department_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBC_CBC_Location__c</fullName>
        <label>Experience Center or Other/FSO Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bangalore Customer Experience Center</fullName>
                </value>
                <value>
                    <fullName>Beijing Customer Experience Center</fullName>
                </value>
                <value>
                    <fullName>Cleveland Customer Experience Center</fullName>
                </value>
                <value>
                    <fullName>Galway Customer Experience Center</fullName>
                </value>
                <value>
                    <fullName>Hangzhou</fullName>
                </value>
                <value>
                    <fullName>Herndon Customer Experience Center</fullName>
                </value>
                <value>
                    <fullName>London Customer Experience Center</fullName>
                </value>
                <value>
                    <fullName>Moscow Customer Experience Center</fullName>
                </value>
                <value>
                    <fullName>Mumbai Customer Experience Center</fullName>
                </value>
                <value>
                    <fullName>New York Customer Experience Center</fullName>
                </value>
                <value>
                    <fullName>San Jose Customer Experience Center</fullName>
                </value>
                <value>
                    <fullName>Shanghai Customer Experience Center</fullName>
                </value>
                <value>
                    <fullName>Singapore Customer Experience Center</fullName>
                </value>
                <value>
                    <fullName>Sydney Customer Experience Center</fullName>
                </value>
                <value>
                    <fullName>Tokyo Customer Experience Center</fullName>
                </value>
                <value>
                    <fullName>Toronto Customer Experience Center</fullName>
                </value>
                <value>
                    <fullName>Other/FSO</fullName>
                </value>
                <value>
                    <fullName>CREATE London IoE Innovation Center</fullName>
                </value>
                <value>
                    <fullName>CTAO SJ IoE Innovation Center</fullName>
                </value>
                <value>
                    <fullName>Barcelona Innovation Center</fullName>
                </value>
                <value>
                    <fullName>Berlin Innovation Center</fullName>
                </value>
                <value>
                    <fullName>Hamburg Innovation Center</fullName>
                </value>
                <value>
                    <fullName>IDEALondon Innovation Center</fullName>
                </value>
                <value>
                    <fullName>Mi-IDEA Innovation Center</fullName>
                </value>
                <value>
                    <fullName>Paris Innovation Center</fullName>
                </value>
                <value>
                    <fullName>Perth Innovation Center</fullName>
                </value>
                <value>
                    <fullName>Rio Innovation Center</fullName>
                </value>
                <value>
                    <fullName>Rolle Innovation Center</fullName>
                </value>
                <value>
                    <fullName>San Jose Innovation Center</fullName>
                </value>
                <value>
                    <fullName>Singapore Innovation Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EBC_CBC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EBC/EC</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Location chosen is not an EBC/CBC location.</errorMessage>
            <filterItems>
                <field>CEE_Location__c.Location_Type__c</field>
                <operation>equals</operation>
                <value>EBC/CBC</value>
            </filterItems>
            <infoMessage>Filtered to EBC/CBC locations.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CEE_Location__c</referenceTo>
        <relationshipLabel>Customer Engagements &amp; Events (EBC/CBC)</relationshipLabel>
        <relationshipName>Customer_Engagement_Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EVENT_ID_Temp__c</fullName>
        <label>EVENT_ID_Temp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_IDs_of_Customer__c</fullName>
        <description>Email id Specified by the Lab requestor while submitting the request to follow up by scheduler</description>
        <inlineHelpText>separated by commas</inlineHelpText>
        <label>Email IDs of Customer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <defaultValue>DATETIMEVALUE(Today()+11)</defaultValue>
        <inlineHelpText>Shown in User's Local Timezone</inlineHelpText>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Time_Site__c</fullName>
        <label>End Time (Site)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Contact_Email__c</fullName>
        <description>Engagement_Contact Email</description>
        <formula>Engagement_Contact__r.Email</formula>
        <label>Engagement Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Contact_Name__c</fullName>
        <description>Engagement Contact Name</description>
        <formula>Engagement_Contact__r.FirstName + ' ' +  Engagement_Contact__r.LastName</formula>
        <label>Engagement Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please enter the 'actual' 'Engagement Contact', which may not be the same as the ‘Requester’</inlineHelpText>
        <label>Engagement Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Engagement_Scheduler</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Related_Engagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Related Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Type of Event

Service Charge required by Event Type is implemented in VF CEEIntermediatePage</description>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EBC_CBC_Location__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco Internal Training</fullName>
                </value>
                <value>
                    <fullName>Demo-Only-Opportunity Required</fullName>
                </value>
                <value>
                    <fullName>Dignitary Visit</fullName>
                </value>
                <value>
                    <fullName>EPN Recording</fullName>
                </value>
                <value>
                    <fullName>Good Will Visit</fullName>
                </value>
                <value>
                    <fullName>Partner Training</fullName>
                </value>
                <value>
                    <fullName>POV Event</fullName>
                </value>
                <value>
                    <fullName>Room Only</fullName>
                </value>
                <value>
                    <fullName>Tour of Center</fullName>
                </value>
                <value>
                    <fullName>Customer Briefing (1 Customer Account)-Opportunity Required</fullName>
                </value>
                <value>
                    <fullName>Partner Briefing (1 Partner Account)</fullName>
                </value>
                <value>
                    <fullName>Multi-Company Customer Event</fullName>
                </value>
                <value>
                    <fullName>Multi-Company Partner Event</fullName>
                </value>
                <value>
                    <fullName>T4 training</fullName>
                </value>
                <value>
                    <fullName>T8 training</fullName>
                </value>
                <value>
                    <fullName>Technical Solution Workshop-Opportunity Required</fullName>
                </value>
                <value>
                    <fullName>Technical Solution Workshop- Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executive in Customer Group?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Click here if you need an Executive to attend/present at the Briefing.</inlineHelpText>
        <label>Executive Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsors__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsors</label>
        <referenceTo>Account_Executive_Sponsor__c</referenceTo>
        <relationshipName>Customer_Engagement_Scheduler</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Book_Date_After_30_Days__c</fullName>
        <label>Expected Book Date After 30 Days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Book_Date_Before_Event__c</fullName>
        <description>JiffleNow Re-design: To capture Expected Book Date Before Event to be used for calculating variance</description>
        <label>Expected Book Date Before Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Book_Date_Variance_After_30_Day__c</fullName>
        <label>Expected Book Date Variance After 30 Day</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Book_Date_Variance_Status__c</fullName>
        <label>Expected Book Date Variance Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Book_Date__c</fullName>
        <description>This field is to display the Close Date of the related opportunity on CES record</description>
        <formula>Opportunity__r.CloseDate</formula>
        <label>Expected Book Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Product__c</fullName>
        <description>This field is to display the Expected Product Converted Value on CES record</description>
        <formula>Opportunity__r.Expected_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Product Converted ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Service__c</fullName>
        <description>This field is to display the Expected Service Amount of related opportunity on CES record</description>
        <formula>Opportunity__r.Expected_Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Service Converted ($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FSAT_NPS_Score__c</fullName>
        <description>Net Promoter Score (NPS) is calculated by subtracting the %Detractors from %Promoters. 
FSAT Promoters scores are 9/10, FSAT Detractors scores are 0-6,FSAT Passives scores are 7/8.</description>
        <formula>if(FSAT_Total_Survey_Responses__c = 0, NULL, 
if(AND(FSAT_Number_of_Survey_Promoters__c=0,FSAT_Number_of_Survey_Detractors__c=0,FSAT_Number_of_Survey_Passives__c=0),NULL,CEILING(((FSAT_Number_of_Survey_Promoters__c- FSAT_Number_of_Survey_Detractors__c) / (FSAT_Total_Survey_Responses__c )) * 100)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Net Promoter Score (NPS) is calculated by subtracting the % Detractors from % Promoters. Promoters scores are 9/10, Detractors scores are 0 – 6, Passives scores are 7/8.</inlineHelpText>
        <label>FSAT NPS Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSAT_Number_of_Survey_Detractors__c</fullName>
        <description>This is the inquisium field to calculate the number of detractors.</description>
        <label>FSAT Number of Survey Detractors</label>
        <summaryFilterItems>
            <field>CEE_Account_Team_Feedback__c.FSAT_Recommendation_Type__c</field>
            <operation>equals</operation>
            <value>Detractors</value>
        </summaryFilterItems>
        <summaryForeignKey>CEE_Account_Team_Feedback__c.CEE__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FSAT_Number_of_Survey_Passives__c</fullName>
        <description>This is the inquisium integration field to calculate the FSAT Number of passives.</description>
        <label>FSAT Number of Survey Passives</label>
        <summaryFilterItems>
            <field>CEE_Account_Team_Feedback__c.FSAT_Recommendation_Type__c</field>
            <operation>equals</operation>
            <value>Passives</value>
        </summaryFilterItems>
        <summaryForeignKey>CEE_Account_Team_Feedback__c.CEE__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FSAT_Number_of_Survey_Promoters__c</fullName>
        <description>This is the integration field to calculate the number of FSAT survey promoters</description>
        <label>FSAT Number of Survey Promoters</label>
        <summaryFilterItems>
            <field>CEE_Account_Team_Feedback__c.FSAT_Recommendation_Type__c</field>
            <operation>equals</operation>
            <value>Promoters</value>
        </summaryFilterItems>
        <summaryForeignKey>CEE_Account_Team_Feedback__c.CEE__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FSAT_Survey_URL__c</fullName>
        <description>This survey URL field is used to display the FSAT OBX and FSAT CPOC Survey URL's in the UI</description>
        <formula>IF(AND 
(RecordTypeId = $Setup.ObjectRecordTypeIds__c.CEE_CPOC_Record_Type_ID__c, 
OR(TEXT(Request_Status__c) == 'Scheduled',TEXT(Request_Status__c) == 'Completed')), 
'https://www.cvent.com/d/1vqvxr/3B?pu=1&amp;qRecID=' &amp; Id &amp; '&amp;iex=' &amp; TEXT(CPOC_Survey_End_Date__c)&amp; 'T23:59:00' , 
IF(AND 
(RecordTypeId = LEFT($Setup.ObjectRecordTypeIds__c.CEE_OBX_Record_Type_ID__c, 15), 
TEXT(Request_Status__c) == 'Confirmed', 
NOT(CONTAINS( $Setup.CPOC_Lab_Request__c.CEE_OBX_Survey_Location__c,Primary_FSO__r.Id)), 
OR(ISPICKVAL(Primary_FSO__r.Location_Type__c ,'EBC/EC'), 
ISPICKVAL( Primary_FSO__r.Location_Type__c ,'Non EBC/EC')), 
ISPICKVAL( Primary_FSO__r.Is_Location_Active__c ,'Yes')),'https://www.cvent.com/d/7vqvxb/3B?pu=1&amp;qRecID=' &amp; Id &amp; '&amp;iex=' &amp; TEXT(Survey_End_Date__c)&amp; 'T23:59:00', 
NULL))</formula>
        <label>FSAT Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSAT_Total_Survey_Responses__c</fullName>
        <description>It is storing a FSAT total number of created responses. 
It is related to CEE Customer Feedback object.</description>
        <label>FSAT Total Survey Responses</label>
        <summaryForeignKey>CEE_Account_Team_Feedback__c.CEE__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FY_Copy__c</fullName>
        <description>Copy of Fiscal Year field, set by workflow, used to break up long chain of formula fields</description>
        <label>FY Copy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FY_Extra_Week__c</fullName>
        <description>Will have value 1 if the FY has extra week in Q3-M1</description>
        <formula>IF( (MOD( DATE( FY_Copy__c , 7, 31 ) - DATE( 1900, 1, 7 ), 7 ) = 6) || (FY_Copy__c == 2016) 
, 1 
, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Extra Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FY_Start_Date__c</fullName>
        <description>Date of the first day of event end date FY</description>
        <formula>IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(1999, 8, 1), NULL, 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2000, 7, 30), DATE(1999, 8, 1), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2001, 7, 29), DATE(2000, 7, 30), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2002, 7, 28), DATE(2001, 7, 29), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2003, 8, 01), DATE(2002, 7, 28), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2004, 8, 01), DATE(2003, 7, 27), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2005, 7, 31), DATE(2004, 8, 1), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2006, 7, 30), DATE(2005, 7, 31), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2007, 7, 29), DATE(2006, 7, 30), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2008, 7, 27), DATE(2007, 7, 29), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2009, 7, 26), DATE(2008, 7, 27), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2010, 8, 1), DATE(2009, 7, 26), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2011, 7, 31), DATE(2010, 8, 1), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2012, 7, 29), DATE(2011, 7, 31), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2013, 7, 28), DATE(2012, 7, 29), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2014, 7, 27), DATE(2013, 7, 28), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2015, 7, 26), DATE(2014, 7, 27), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2016, 7, 31), DATE(2015, 7, 26), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2017, 7, 30), DATE(2016, 7, 31), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2018, 7, 29), DATE(2017, 7, 30), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2019, 7, 28), DATE(2018, 7, 29), 
IF( DATEVALUE(Start_Date_Time__c) &lt; DATE(2020, 7, 26), DATE(2019, 7, 28), 
NULL))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Approval_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Approval Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <formula>IF(ISNULL(Fiscal_Week__c), 0, 
IF( Fiscal_Week__c &lt;= 13, 1, 
IF( Fiscal_Week__c &lt;= 26, 2, 
IF( Fiscal_Week__c &lt;= 39 + FY_Extra_Week__c , 3, 
4))))</formula>
        <label>Fiscal Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Week__c</fullName>
        <description>Fiscal Week number(Julian) of End date event, set by workflow</description>
        <label>Fiscal Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flexible_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to denote whether the selected Date and Time are flexible.</description>
        <inlineHelpText>If chosen, the customer time is open to being adjusted given the availability of presenters.</inlineHelpText>
        <label>Flexible Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_Up_to_Previous_Engagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow Up to Previous Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_up_discussion__c</fullName>
        <description>One of three text fields for Post-Engagement Notes.</description>
        <inlineHelpText>Is there a follow-up discussion you would recommend the customer have with IT?</inlineHelpText>
        <label>Follow-up discussion?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Geographic_Location__c</fullName>
        <description>Geographic Location</description>
        <formula>IF( NOT(ISBLANK(Primary_FSO__c)), 
        TEXT(Primary_FSO__r.Geographic_Location__c),
        IF(NOT(ISBLANK( CPOC_Location__c )),
               TEXT(CPOC_Location__r.Geographic_Location__c),
         '')
)</formula>
        <label>Geographic Location</label>
        <type>Text</type>
    </fields>
</CustomObject>